--- a/.classpath
+++ b/.classpath
@@ -12,8 +12,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src/resources"/>
-	<classpathentry kind="src" path="src/core/java"/>
+	<classpathentry kind="src" output="target/classes" path="src/resources"/>
+	<classpathentry kind="src" output="target/classes" path="src/core/java"/>
 	<classpathentry kind="src" path="src/main/assembly"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
